# art-of-stream-processing-workshop

./: README.md
conduit/: Makefile  art-conduit.cabal  cabal.sandbox.config
conduit/src/: main.hs
conduit/src/Art/: Conduit.hs
machines/: art-machines.cabal  cabal.sandbox.config
machines/src/: main.hs
machines/src/Art/: Machines.hs
pipes/: art-pipes.cabal  cabal.sandbox.config
pipes/src/: main.hs
pipes/src/Art/: Pipes.hs
scalaz-stream/: .gitignore  build.sbt  dependencies.sbt
scalaz-stream/src/main/scala/art/: Workshop.scala
